# algolib-adg

./: .coverage  .coverage 2  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: algo-agent.yml  ci.yml  docs.yml
agent_tools/: agent.py  base.py  bench_runner.py  code_writer.py  doc_writer.py  llm_router.py  test_writer.py
agent_tools/templates/: benchmark.py.jinja  code.py.jinja  doc.rst.jinja  test.py.jinja
algolib/: __init__.py  _typing.py  interfaces.py  py.typed
algolib/algorithms/: base.py  py.typed
algolib/algorithms/graph/traversal/: bfs.py
algolib/algorithms/searching/: __init__.py  base.py  binary.py  linear.py
algolib/algorithms/sorting/: __init__.py  base.py  bubble.py  merge.py  py.typed
algolib/api/: main.py
algolib/data_structures/: disjoint_set.py  graph.py  linked_list.py  queue.py  stack.py
algolib/db/: models.py  session.py
algolib/interfaces/: __init__.py
algolib/specs/: schema.py
docker/api/: Dockerfile
docker/streamlit/: Dockerfile
docs/: Algorithms_List.md  Plan.md
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_sources/: index.rst.txt
docs/source/: CONTRIBUTING.rst  agent_overview.rst  complexity_cheatsheet.rst  conf.py  contributors_guide.rst  index.rst  why.rst
docs/source/algorithms/graph/traversal/: bfs.rst
docs/source/algorithms/searching/: binary.rst  linear.rst
docs/source/algorithms/sorting/: bubble.rst  merge.rst
docs/source/data_structures/: stack.rst
docs/uml/: merge_flow.puml  stack_seq.puml
migrations/: env.py
migrations/versions/: efd4449df5b5_initial_schema.py
scripts/: check_interface.py  db_init.sh  fetch_plantuml.sh  run_algo_agent.py
specs/: BubbleSort.yml  schema.json
tests/: test_smoke.py
tests/algorithms/: test_base.py
tests/algorithms/graph/traversal/: test_bfs.py
tests/algorithms/searching/: test_binary.py  test_linear.py  test_searcher_abc.py
tests/algorithms/sorting/: test_bubble.py  test_merge.py  test_sorter_abc.py
tests/api/: test_main.py
tests/data_structures/: test_disjoint_set.py  test_graph.py  test_linked_list.py  test_queue.py  test_stack.py
tests/db/: test_db.py
tests/property/: strategies.py  test_disjoint_set_properties.py  test_graph_properties.py  test_search_properties.py  test_sort_properties.py
tests/specs/: test_schema.py
tests/utils/: helpers.py  test_typing.py
