[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "algolib-adg"
version = "0.2.0"
description = "A comprehensive library of algorithms and data structures, with a focus on clean code, SOLID principles, and thorough testing."
authors = ["Aditya Gambhir"]
license = "MIT"
packages = [{ include = "algolib" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
typing-extensions = ">=4.14.1,<5.0.0"
fastapi = {version = "^0.116.0", optional = true}
uvicorn = { extras = ["standard"], version = "^0.35.0", optional = true }
sqlmodel = {version = "^0.0.24", optional = true}
psycopg-binary = {version = "^3.1", optional = true}
alembic = {version = "^1.13", optional = true}
streamlit = {version = "^1.33", optional = true}
ollama = "^0.5.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
furo = "^2024.8.6"
hypothesis = "^6.135.24"
mypy = "^1.16.1"
pre-commit = "^4.2.0"
pytest = "^8.4.1"
pytest-benchmark = "^5.1.0"
pytest-cov = "^6.2.1"
ruff = "^0.12.2"
sphinx = "^8.2.3"
sphinx-autobuild = "^2024.10.3"
types-pyyaml = "^6.0.12.20250516"
jinja2 = "^3.1.6"
astor = "^0.8.1"
gitpython = "^3.1.43"
pyyaml = "^6.0.1"
pip-audit = "^2.7.3"
plantuml = "^0.3.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.28.1"
commitizen = "^4.8.3"

[tool.poetry.extras]
api = ["fastapi", "uvicorn", "sqlmodel", "psycopg-binary", "alembic"]
streamlit = ["streamlit"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["agent_tools", "streamlit_app"]

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), I (isort), B (flake8-bugbear) …
select = ["E", "F", "I", "B", "W", "C90"]
ignore = ["E501"]   # long lines handled by formatter

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "sqlmodel"]

[tool.ruff.format]
# Enables Black-compatible formatting
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []
exclude = ["agent_tools", "streamlit_app"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "astor"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=algolib --cov-report=xml --cov-fail-under=95 -q"
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "algolib/interfaces/*",
]

[tool.commitizen]
version = "0.2.0"
version_files = [
    "pyproject.toml:version"
]
